XFA - Fix wrong vertical alignments

--- a/web/xfa_layer_builder.css
+++ b/web/xfa_layer_builder.css
@@ -44,7 +44,6 @@
   letter-spacing: -0.01px;
   text-align: inherit;
   text-decoration: inherit;
-  vertical-align: inherit;
   box-sizing: border-box;
   background: transparent;
   padding: 0;
